--- a/package.json
+++ b/package.json
@@ -49,6 +49,7 @@
     "parse-md": "^2.0.5",
     "remarkable": "^2.0.1",
     "sass": "^1.64.1",
+    "toastify-js": "^1.12.0",
     "uuid4": "^2.0.3"
   }
 }
