--- a/.pugrc
+++ b/.pugrc
@@ -387,6 +387,15 @@
     },
     "blogs": [
       {
+        "title": "USDT vs USDTe",
+        "cover": "https://cdn-images-1.medium.com/max/1600/0*TyfUNnvRWu8drfaE",
+        "tag": "wiki",
+        "text": "What's the difference between USDT and USDT.e on the NEAR Protocol",
+        "timeToRead": "3 min",
+        "date": "01.11.2023",
+        "href": "usdt-vs-usdte"
+      },
+      {
         "title": "September recap",
         "cover": "https://cdn-images-1.medium.com/max/1600/0*0uA5qKRB8IVCWRyy",
         "tag": "recap",
@@ -397,7 +406,7 @@
       },
       {
         "title": "Weekly score awards",
-        "cover": "https://miro.medium.com/v2/resize:fill:88:88/1*88BViXP3LNYjQNAtO12QVA.png",
+        "cover": "https://miro.medium.com/v2/resize:fit:1400/format:webp/1*76B2eij22HFELHaLdN-0ow.jpeg",
         "tag": "score",
         "text": "We are excited to introduce our new activity for HERE Wallet users! Every week, you can earn score for specific actions, and the leaders in weekly leaderboard will get rewards in USDT",
         "timeToRead": "2 min",
