--- a/tsconfig.json
+++ b/tsconfig.json
@@ -3,6 +3,6 @@
         "allowJs": true,
         "strict": true,
         "lib": ["es2021", "DOM"],
-        "allowSyntheticDefaultImports": true
+        "allowSyntheticDefaultImports": true,
     }
 }
