--- a/.pugrc
+++ b/.pugrc
@@ -7,7 +7,7 @@
       "mailto": "mailto:support@herewallet.app",
       "termsLocale": "Privacy policy and Terms of Service",
       "termsLink": "/privacypolicy",
-      "download": "https://download.herewallet.app/site",
+      "appStore": "https://download.herewallet.app/site",
       "appAndroidTitle": "Download on Google Play",
       "appAndroid": "https://play.google.com/store/apps/details?id=com.herewallet",
       "socials": [
