--- a/.pugrc
+++ b/.pugrc
@@ -525,6 +525,15 @@
     },
     "blogs": [
       {
+        "title": "Difference Between USDC and USDC.e: A Comprehensive Guide",
+        "cover": "https://miro.medium.com/v2/resize:fit:786/format:webp/1*ZHsFLM6TVuDHGWclY2fdgA.jpeg",
+        "tag": "wiki",
+        "text": "This article will help you understand the differences between USDC and USDC.e. After this article, you will understand the differences and functionality of these two stablecoins.",
+        "timeToRead": "3 min",
+        "date": "26.12.2023",
+        "href": "USDC-vs-USDCe"
+      },
+      {
         "title": "BLACKDRAGON TOKENS AIRDROP",
         "cover": "https://miro.medium.com/v2/resize:fit:786/format:webp/1*1xDazVMI2K6wTAqiBCNuNQ.jpeg",
         "tag": "NFT",
