--- a/.pugrc
+++ b/.pugrc
@@ -552,6 +552,24 @@
         "href": "HERE_wallet_NFT"
       },
       {
+        "title": "NEAR TELEGRAM WALLET: Complete Guide",
+        "cover": "https://storage.herewallet.app/upload/f588d0f7-57e5-4525-b116-5ea4acda7d91.png",
+        "tag": "Tutorial",
+        "text": "The NEAR Telegram Wallet is a fully decentralized crypto wallet designed for the NEAR Protocol. In this article, we will provide detailed instructions on how to use it.",
+        "timeToRead": "3 min",
+        "date": "16.01.2024",
+        "href": "Near-Telegram-Wallet"
+      },
+      {
+        "title": "How to mine HOT",
+        "cover": "https://storage.herewallet.app/upload/445f61bf-19d7-4bb5-8b0a-8f4b2c2c64ed.png",
+        "tag": "Tutorial",
+        "text": "In this article you will learn all about what HOT is, how to mine it, how to increase the mining speed and what missions await you.",
+        "timeToRead": "7 min",
+        "date": "16.01.2024",
+        "href": "how-to-mine-HOT"
+      },
+      {
         "title": "December recap",
         "cover": "https://storage.herewallet.app/upload/a309b580-17ac-4798-8bcc-91ba68c004bc.png",
         "tag": "recap",
