--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -47,10 +47,10 @@ jobs:
 
       - name: SCP files
         run: |
-          scp -o StrictHostKeyChecking=no -r ./dist-near/* fedor@web.herewallet.app:/var/www/here/www
-          scp -o StrictHostKeyChecking=no -r ./dist-pager/* fedor@web.herewallet.app:/var/www/here/pager
-          scp -o StrictHostKeyChecking=no -r ./howto/* fedor@web.herewallet.app:/var/www/here/www/howto
-          scp -o StrictHostKeyChecking=no -r ./privacypolicy/* fedor@web.herewallet.app:/var/www/here/www/privacypolicy
-          scp -o StrictHostKeyChecking=no -r ./nft/* fedor@web.herewallet.app:/var/www/here/www/nft
-          scp -o StrictHostKeyChecking=no -r ./dist/* fedor@web.herewallet.app:/var/www/here/www
-          scp -o StrictHostKeyChecking=no -r ./dist/landing/* fedor@web.herewallet.app:/var/www/here/near
+          scp -o StrictHostKeyChecking=no -r ./dist-near/* fedor@5.161.137.59:/var/www/here/www
+          scp -o StrictHostKeyChecking=no -r ./dist-pager/* fedor@5.161.137.59:/var/www/here/pager
+          scp -o StrictHostKeyChecking=no -r ./howto/* fedor@5.161.137.59:/var/www/here/www/howto
+          scp -o StrictHostKeyChecking=no -r ./privacypolicy/* fedor@5.161.137.59:/var/www/here/www/privacypolicy
+          scp -o StrictHostKeyChecking=no -r ./nft/* fedor@5.161.137.59:/var/www/here/www/nft
+          scp -o StrictHostKeyChecking=no -r ./dist/* fedor@5.161.137.59:/var/www/here/www
+          scp -o StrictHostKeyChecking=no -r ./dist/landing/* fedor@5.161.137.59:/var/www/here/near
